ACS-6121 MNT-24007 Use issuer URI from the IdP - Java 11 Compatibility